k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshcart-ingress
  namespace: freshcart
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: checkout-api
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: storefront
                port:
                  number: 80
